--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -711,7 +711,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-        <h3>Endas Brena Sinulingga</h3>
+        <h3>Enndas Brena Sinulingga</h3>
         <p>Follow me on</p>
         <div class="social-links">
             <!-- Ubah href ini -->
